fix: large pagination btn vertical align

--- a/styles/themes/ksyun/pagination.styl
+++ b/styles/themes/ksyun/pagination.styl
@@ -18,4 +18,7 @@
         color $primary-color
         border-color $primary-color
         background-color lighten($primary-color, 85%)
+    &.k-large
+        .k-btn > span
+            line-height unit($large-height, px)
 
